--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
             </div>
         </form>
     </div>
-    <script src="script.js"></script>
+    <script src="work.js"></script>
 </body>
 </html>
